Fixed Current Entry Summary Ellipsis for Overflow
Also more messing around with colors

--- a/timeblob/static/timeblob/style/style.css
+++ b/timeblob/static/timeblob/style/style.css
@@ -3,10 +3,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-color: rgba(45,14,38,1);
-    //background-attachment: fixed;
-    //background-repeat: no-repeat;
-    //background: linear-gradient(to top, rgba(35,14,28,1), rgba(45,14,38,1)50%);
-    color: rgba(160,60,139,1);
+    color: rgba(85,181,135,1);
     font-family: Montserrat, Ubuntu, Verdana, sans-serif;
     font-weight: 200;
 }
@@ -35,7 +32,6 @@ body {
 .edit-options-bar {
     border-top: 1px solid rgba(239,175,227,0.1);
     background-color: rgba(96,37,81,1);
-    //overflow: hidden;
     position: relative;
     z-index: 3;
 }
@@ -117,7 +113,6 @@ select::after {
 .action-bar {
     display: none;
     width: 100%;
-    //max-height: 3em;
     flex-flow: row;
     z-index: 1;
 }
@@ -149,27 +144,34 @@ select::after {
 
 .click-catcher.active {
     display: block;
+    background-color: rgba(0,0,0,0.4);
 }
 
 /* ================================
     Color Theme Control
 ================================= */
 .primary-action-color {
-    fill: rgba(160,60,139,1);
-    stroke: rgba(160,60,139,1);
-    color: rgba(160,60,139,1);
+    color: rgba(85,181,135,1);
 }
 
-.secondary-action-fill {
+.primary-action-fill {
     fill: rgba(85,181,135,1);
 }
 
+.primary-action-stroke {
+    stroke: rgba(85,181,135,1); 
+}
+
+.secondary-action-fill {
+    fill: rgba(160,60,139,1);
+}
+
 .secondary-action-stroke {
-    stroke: rgba(85,181,135,1);
+    stroke: rgba(160,60,139,1);
 }
 
 .secondary-action-color {
-    color: rgba(85,181,135,1);
+    color: rgba(160,60,139,1);
 }
 
 /* ================================
@@ -249,6 +251,13 @@ select::after {
     display: none;
 }
 
+#current-entry-summary div {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    color: rgba(85,181,135,1);
+}
+
 #current-form-area {
     padding: 1em;
     max-width: 32em;
@@ -277,6 +286,7 @@ select::after {
     text-overflow: ellipsis;
     flex: 0 0 5em;
     font-weight: 200;
+    color: rgba(160,60,139,1);
 }
 
 #current-entry-form input {
@@ -286,7 +296,7 @@ select::after {
     box-sizing: border-box;
     border: none;
     border-bottom: 1px solid rgba(90,90,90,0);
-    color: rgba(239,174,60,1);
+    color: rgba(85,181,135,1);
     font-family: Montserrat, Ubuntu, Verdana, sans-serif;
     font-size: 1em;
     transition: border 0.5s, color 0.5s;
@@ -344,7 +354,7 @@ select::after {
 }
 
 .picker-window li {
-    color: rgba(239,80,80,0.8);
+    color: rgba(85,181,135,0.8);
     padding: 0.5em 1em;
     width: calc(100% + 2em);
     position: relative;
@@ -355,13 +365,17 @@ select::after {
 }
 
 .picker-window li:hover, .picker-window li:active, .manage-list li:hover {
-    color: rgba(239,80,80,1);
-    background-color: rgba(239,80,80,0.1);
-    border-right: 3px solid rgba(239,174,60,1);
+    color: rgba(85,181,135,1);
+    background-color: rgba(85,181,135,0.2);
+    border-right: 3px solid rgba(255,255,255,1);
 }
 
 .picker-window p {
-    //color: rgba(85,181,135,1); 
+    color: rgba(160,60,139,1);
+}
+
+.picker-window svg {
+    padding-bottom: 1em;
 }
 
 
@@ -653,7 +667,7 @@ edit-entry-form form input:nth-child(3n) {
 
 .sublist.display li input {
     text-align: left;
-    color: rgba(239,174,60,1);
+    color: rgba(85,181,135,1);
     box-sizing: border-box;
     padding: 1em 0.5em 0.15em;
     margin: 0 0 0.85em;
@@ -693,9 +707,8 @@ edit-entry-form form input:nth-child(3n) {
     display: block;
 }
 .list-item-selected {
-    color: rgba(239,174,60,1);
-    background-color: rgba(239,174,60,0.1);
-    background: linear-gradient(to left, rgba(239,174,60,0.3), rgba(239,174,60,0.1) 15%);
+    color: rgba(255,255,255,1);
+    background-color: rgba(85,181,135,0.1);
     border-right: 3px solid rgba(255,255,255,1);
 }
 #manage-view .action-bar {
@@ -724,6 +737,7 @@ edit-entry-form form input:nth-child(3n) {
     text-align: left;
     padding: 0;
     background-color: white;
+    color: rgba(160,60,139,1);
     overflow: hidden;
     transition: max-height 0.2s;
 }
@@ -863,10 +877,6 @@ edit-entry-form form input:nth-child(3n) {
         width: 100%;
         margin: 0.5em 0 0;
         padding: 0.5em 0;
-        color: rgba(160,60,139,1);
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
     }
     #current-entry-summary div:first-child {
         font-size: 0.8em;
